# ledfx-rust

./: .gitignore  .prettierrc  README.md  files.txt  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
android-native/: AudioVisualizer.kt  PermissionPlugin.kt
scripts/: .generation-cache.json  generate-effects.js
src/: App.css  App.tsx  bindings.ts  main.tsx  tauri.d.ts
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  entitlements.macos.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: android.json  default.json
src-tauri/icons/: icon.icns
src-tauri/res/android/: AndroidManifest.xml
src-tauri/src/: audio.rs  effects.rs  engine.rs  lib.rs  main.rs  presets.rs  store.rs  types.rs  utils.rs  wled.rs
src-tauri/src/api/: mod.rs
src-tauri/src/audio/: android.rs  capture.rs  desktop.rs  devices.rs  mod.rs  shared_processing.rs
src-tauri/src/effects/: blade_power.rs  mod.rs  scan.rs  schema.rs  simple.rs
src-tauri/src/effects/blade/: blade_power.rs  mod.rs
src-tauri/src/effects/fx/: blade_power.rs  fire.rs  mod.rs  scan.rs
src-tauri/src/effects/legacy/: blade_power.rs  mod.rs  scan.rs
src-tauri/src/engine/: commands.rs  generated.rs  handler.rs  mod.rs  renderer.rs  state.rs
src-tauri/src/utils/: colors.rs  ddp.rs  dsp.rs  mod.rs
src/components/: AddButton.tsx  AddVirtualDialog.tsx  ConfigDrop.tsx  ConfigProvider.tsx  DevTools.tsx  DeviceCard.tsx  Devices.tsx  EditVirtualDialog.tsx  Effect.Settings.tsx  EffectPreview.tsx  GlobalControls.tsx  IconBtn.tsx  ImportExportButtons.tsx  MelbankVisualizer.tsx  SettingsActions.tsx  Virtuals.tsx  WledDiscoverer.tsx
src/components/DevTools/: DevTools.tsx  JsonTreeView.tsx
src/components/DeviceCard/: DeviceCard.tsx  EffectPicker.tsx  EffectPreview.tsx  EffectSettings.tsx  Infoline.tsx
src/components/GradientPicker/: GradientPicker.styles.tsx  GradientPicker.tsx
src/components/MelbankVisualizer/: MelbankVisualizer.tsx  MelbankVisualizerFab.tsx
src/components/Popover/: Popover.tsx
src/components/Scenes/: SaveSceneDialog.tsx  ScenesFab.tsx
src/components/Settings/: ConfigDrop.tsx  ConfirmClearDialog.tsx  CurveVisualizer.tsx  DspSettings.tsx  ExportDialog.tsx  Settings.tsx  SettingsActions.tsx  SettingsFab.tsx  SettingsRow.tsx
src/components/TopBar/: LeftActions.tsx  RightActions.tsx  TopBar.tsx
src/components/VirtualCard/: EffectPicker.tsx  EffectPreview.tsx  EffectSettings.tsx  PresetManager.tsx  VirtualCard.tsx  VirtualsCard.tsx
src/components/Virtuals/: AddButton.tsx  EditVirtualDialog.tsx  Virtuals.tsx
src/components/WLED/: WledDiscoverer.tsx
src/components/base/: IconBtn.tsx
src/components/controls/: AudioSettings.tsx  (+2 more)
src/hooks/: useEvents.ts  useInit.ts
src/lib/: rust.ts
src/store/: frameStore.ts  useStore.ts
src/types/: wled.ts
src/utils/: deepEqual.ts  environment.ts
(+17 files in other folders)
