[package]
name = "ledfx-rust"
version = "0.0.1"
description = "A Tauri App"
authors = ["YeonV", "Blade"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ledfx_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
mdns-sd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
cpal = "0.16.0"
rustfft ="6.4.0"
