[package]
name = "ledfx-rust"
version = "0.0.1"
description = "A Tauri App"
authors = ["YeonV", "Blade"]
edition = "2021"
# build = "build.rs"

[lib]
name = "ledfx_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# All specta dependencies are removed from here

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
mdns-sd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
cpal = "0.16.0"
rustfft = "6.4.0"
specta = { version = "2.0.0-rc.22", features = ["serde"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"
once_cell = "1.19.0"
as-any = "0.3.2"
tauri-plugin-os = "2"
apodize = "1.0.0"
regex = "1.11.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
